fixed sidebar spacing

--- a/src/components/Layout/styles.css
+++ b/src/components/Layout/styles.css
@@ -1,3 +1,8 @@
 .portfolioContainer {
   position: relative;
 }
+
+.portfolioContainerSidebar {
+  position: relative;
+  padding-left: 210px;
+}
